<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">


    <TextView
        android:id="@+id/full_screen_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/like_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/like"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/close_button" />

    <ImageView
        android:id="@+id/icon_view"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/close_button"
        app:srcCompat="@drawable/restaurant_icon_a" />

    <TextView
        android:id="@+id/info_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/info_name"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/icon_view"
        app:layout_constraintTop_toTopOf="@+id/icon_view" />

    <TextView
        android:id="@+id/info_socre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_score"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/icon_view"
        app:layout_constraintStart_toStartOf="@+id/info_name" />

    <TextView
        android:id="@+id/info_average_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_average_cost"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/icon_view"
        app:layout_constraintEnd_toEndOf="@+id/info_name" />

    <TextView
        android:id="@+id/info_basic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_basic"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/icon_view"
        app:layout_constraintTop_toBottomOf="@+id/icon_view" />

    <TextView
        android:id="@+id/info_detailed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_detailed"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/icon_view"
        app:layout_constraintTop_toBottomOf="@+id/info_basic" />

    <Button
        android:id="@+id/promotion_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/promotion"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_detailed" />

    <Button
        android:id="@+id/menu_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/menu"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/promotion_button" />

    <Button
        android:id="@+id/comment_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/comment"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu_button" />

    <Button
        android:id="@+id/book_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/booking"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comment_button" />


</androidx.constraintlayout.widget.ConstraintLayout>