<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcomeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:gravity="center_horizontal"
        android:inputType="text"
        android:text="@string/welcomeTitle"
        android:textColor="@color/teal_700"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:gravity="top|start"
        android:inputType="textMultiLine"
        android:lines="10"
        android:maxLines="10"
        android:minLines="1"
        android:padding="16dp"
        android:text="@string/greeting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTitle" />

    <TextView
        android:id="@+id/require_permission"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:inputType="textMultiLine"
        android:lines="2"
        android:text="@string/require_permission"
        android:textColor="@color/teal_700"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greeting" />

    <ImageView
        android:id="@+id/gps_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/require_permission"
        app:srcCompat="@drawable/gps_icon" />

    <TextView
        android:id="@+id/gps_permission"
        android:layout_width="335dp"
        android:layout_height="85dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:inputType="textMultiLine"
        android:lines="5"
        android:text="@string/gps_permission"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/gps_icon"
        app:layout_constraintTop_toBottomOf="@+id/require_permission" />

    <ImageView
        android:id="@+id/camera_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gps_permission"
        app:srcCompat="@drawable/camera_icon" />

    <TextView
        android:id="@+id/camera_permission"
        android:layout_width="335dp"
        android:layout_height="70dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:inputType="textMultiLine"
        android:lines="5"
        android:text="@string/camera_permission"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/camera_icon"
        app:layout_constraintTop_toBottomOf="@+id/gps_permission" />

    <ImageView
        android:id="@+id/photo_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/camera_permission"
        app:srcCompat="@drawable/photo_icon" />

    <TextView
        android:id="@+id/photo_permission"
        android:layout_width="335dp"
        android:layout_height="70dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:inputType="textMultiLine"
        android:lines="5"
        android:text="@string/photo_permission"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/photo_icon"
        app:layout_constraintTop_toBottomOf="@+id/camera_permission" />

    <CheckBox
        android:id="@+id/finish_reading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/finish_reading"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photo_permission" />

    <Button
        android:id="@+id/agree_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:text="@string/agree_button"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintEnd_toStartOf="@+id/disagree_button"
        app:layout_constraintHorizontal_bias="0.216"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/finish_reading" />

    <Button
        android:id="@+id/disagree_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:text="@string/disagree_button"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/agree_button"
        app:layout_constraintTop_toBottomOf="@+id/finish_reading" />
</androidx.constraintlayout.widget.ConstraintLayout>